[project]
name = "performance_testing"
version = "0.1.0"
description = "performance_testing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
performance_testing = "performance_testing.main:run"
run_crew = "performance_testing.main:run"
train = "performance_testing.main:train"
replay = "performance_testing.main:replay"
test = "performance_testing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
